--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -36,15 +36,18 @@
 
 .footer-container {
     display: flex;
+    flex-wrap: wrap; 
     justify-content: space-between;
     padding: 30px 0;
     gap: 10px;
     width: 90%;
     margin: auto;
-}
+  }
+
 
 .footer-section {
-    width: 25%;
+  flex: 1; 
+  margin-bottom: 20px;
 }
 
 .footer-elements {
@@ -140,3 +143,31 @@
     font-size: 16px;
     margin-top: 20px;
 }
+
+
+
+@media (max-width: 768px) {
+    .footer-container {
+      flex-direction: column; 
+      gap: 20px; 
+    }
+    .footer-section {
+      width: 100%; 
+    }
+    .footer-partners {
+      flex-wrap: wrap; 
+    }
+  }
+  
+  
+  @media (max-width: 480px) {
+    .footer-container {
+      gap: 10px; 
+    }
+    .footer-section {
+      font-size: 14px; 
+    }
+    .footer-partners img {
+      height: 30px; 
+    }
+  }
